<resources>
    <string name="app_name">Taobao</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">请输入Email</string>
    <string name="error_invalid_password">请输入密码</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registe">注册</string>
    <string name="login">登录</string>
    <string name="remember">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="taobao">校园淘宝</string>
    <string name="todo">TODO</string>
    <string name="title_activity_add_goods">AddGoods</string>
    <string name="input">请输入商品名称</string>
    <string name="description">请输入描述</string>
</resources>
